1.0.7: March 4, 2019
	- GRanges object uses names(gr) feature	

1.0.6: Feb 28, 2019
	- fix plotDecorate() for intervals with no genes
	- fix collapseClusters() and plotDecorate() error with feature names
	
1.0.5: Feb 27, 2019
	- plotDecorate() now plots genes
	- much faster collapseClusters()

1.0.4: Feb 25, 2019
	- Fix small bugs in syntax
	- update vignette to new workflow
	- update readme

1.0.3: Feb 22, 2019
	- add retainClusters() to process results of scoreClusters()
	- chance synatax of filterClusters()
	- add collapseCluster() to drop redundant clusters
	- countClusters() fix

1.0.2: Feb 21, 2019
	- Add genes to plotDecorate()
	- add handling of multiple clustering cutoff parameters
	- parallelize scoreClusters()

1.0.1
	- add evaluateCorrDecay()
	- fix plotting for plotDecorate() and plotCompareCorr()

1.0.0
	- Release

0.99.3:
	- fix issues with ploting trees

0.99.2:
	- reduce memory usage substantially
	- reduce compute time 100x by using adaptive permutations

Jan 22, 2019:
    Initial version