@@ -1,5 +1,6 @@
 1.0.7: March 4, 2019
 	- GRanges object uses names(gr) feature	
+	- drop chromosomes from GRanges objects is they don't have any entries
 
 1.0.6: Feb 28, 2019
 	- fix plotDecorate() for intervals with no genes
